applied random and game

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                         <button onclick="filterFragile(false)">NON-FRAGILE</button>
                     </div>
                     <div class="d-flex justify-content-center">
-                        <button onclick="draw ()">RESET</button>
+                        <button onclick="reset ()">RESET</button>
                         <!-- <button onclick="random()">RANDOM</button> -->
                     </div>
                 </div>
